--- a/server/model-config.json
+++ b/server/model-config.json
@@ -12,5 +12,9 @@
       "../common/mixins",
       "./mixins"
     ]
+  },
+  "users": {
+    "dataSource": "pocketcaddy-np",
+    "public": true
   }
 }
