Updated model definitions to include base models

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -13,7 +13,35 @@
       "./mixins"
     ]
   },
-  "users": {
+  "Users": {
+    "dataSource": "pocketcaddy-np",
+    "public": true
+  },
+  "Authorization": {
+    "dataSource": "pocketcaddy-np",
+    "public": true
+  },
+  "Clubs": {
+    "dataSource": "pocketcaddy-np",
+    "public": true
+  },
+  "Swings": {
+    "dataSource": "pocketcaddy-np",
+    "public": true
+  },
+  "Courses": {
+    "dataSource": "pocketcaddy-np",
+    "public": true
+  },
+  "Games": {
+    "dataSource": "pocketcaddy-np",
+    "public": true
+  },
+  "Holes": {
+    "dataSource": "pocketcaddy-np",
+    "public": true
+  },
+  "Scores": {
     "dataSource": "pocketcaddy-np",
     "public": true
   }
