added testing dependencies/packages

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "strong-error-handler": "^2.0.0"
   },
   "devDependencies": {
+    "@loopback/testlab": "^0.3.2",
     "eslint": "^3.17.1",
     "eslint-config-loopback": "^8.0.0",
+    "mocha": "^5.0.4",
     "nsp": "^2.1.0"
   },
   "repository": {
