--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "posttest": "npm run lint && nsp check"
   },
   "dependencies": {
+    "chai": "^4.1.2",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "dotenv": "^5.0.1",
@@ -26,7 +27,8 @@
     "@loopback/testlab": "^0.3.2",
     "eslint": "^3.17.1",
     "eslint-config-loopback": "^8.0.0",
-    "mocha": "^5.0.4",
+    "chai": "*",
+    "mocha": "*",
     "nsp": "^2.1.0"
   },
   "repository": {
