--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^5.0.0",
     "loopback-connector-mysql": "^2.4.1",
+    "loopback-ssl": "^1.0.3",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^2.0.0"
   },
