--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "loopback-connector-mysql": "^2.4.1",
     "loopback-ssl": "^1.0.3",
     "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^2.0.0"
+    "strong-error-handler": "^2.0.0",
+    "forever":"0.15.3"
   },
   "devDependencies": {
     "@loopback/testlab": "^0.3.2",
