Updated comments and scores configuration

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -41,6 +41,10 @@
     "dataSource": "pocketcaddy_prod",
     "public": true
   },
+  "Comments": {
+    "dataSource": "pocketcaddy_prod",
+    "public": true
+  },
   "AccessToken": {
     "dataSource": "pocketcaddy_prod",
     "public": false,
